kubernetes/helm/middleware-k8s/manifests/jboss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jboss
spec:
  selector:
    app: jboss
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
