kubernetes/helm/middleware-k8s/manifests/weblogic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weblogic
spec:
  selector:
    app: weblogic
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 7001
  type: ClusterIP
