kubernetes/helm/middleware-k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: middleware-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - nginx.helmgolmolab.duckdns.org
      - apache.helmgolmolab.duckdns.org
      - tomcat.helmgolmolab.duckdns.org
      - jboss.helmgolmolab.duckdns.org
      - weblogic.helmgolmolab.duckdns.org
    secretName: wildcard-duckdns-tls
  rules:
  - host: nginx.helmgolmolab.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: apache.helmgolmolab.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 80
  - host: tomcat.helmgolmolab.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 8080
  - host: jboss.helmgolmolab.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jboss
            port:
              number: 8080
  - host: weblogic.helmgolmolab.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weblogic
            port:
              number: 7001
